tests/baselines/reference/privateNameDuplicateField.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameDuplicateField.ts(3,5): error TS2300: Duplicate identifier '#foo'.


==== tests/cases/conformance/classes/members/privateNames/privateNameDuplicateField.ts (1 errors) ====
    class A {
        #foo = "foo";
        #foo = "foo";
        ~~~~
!!! error TS2300: Duplicate identifier '#foo'.
    }
    